Bug fixes
Signed-off-by: Lehlogonolo Poole <hlonipoole692@gmail.com>